changed part of front

--- a/front/main-page.html
+++ b/front/main-page.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
 
+    <script src="js/localStorageInit.js"></script>
     <script src="js/main-page.js"></script>
 </head>
 <body id="id">
@@ -48,408 +49,33 @@
 
 <main>
     <div class="coupon_list">
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="coupon_card">
-            <div class="image_part">
-                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
-            </div>
-            <div class="description_part">
-                <div class="coupon_name">
-                    Coupon Name
-                </div>
-                <div class="icon">
-                    <i class="material-icons">
-                        favorite
-                    </i>
-                </div>
-                <div class="brief_description">
-                    Some brief description
-                </div>
-                <div class="expires_in">
-                    Expires in 3 days
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="price_part">
-                <div class="price">
-                    $235
-                </div>
-                <div class="add_to_card">
-                    <button>Add to Cart</button>
-                </div>
-            </div>
-        </div>
+        <!--        <div class="coupon_card">-->
+        <!--            <div class="image_part">-->
+        <!--                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">-->
+        <!--            </div>-->
+        <!--            <div class="description_part">-->
+        <!--                <div class="coupon_name">-->
+        <!--                    Coupon Name-->
+        <!--                </div>-->
+        <!--                <div class="icon">-->
+        <!--                    <i class="material-icons">-->
+        <!--                        favorite-->
+        <!--                    </i>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--            <div class="brief_description">-->
+        <!--                Some brief description-->
+        <!--            </div>-->
+        <!--            <div class="line"></div>-->
+        <!--            <div class="price_part">-->
+        <!--                <div class="price">-->
+        <!--                    $235-->
+        <!--                </div>-->
+        <!--                <div class="add_to_card">-->
+        <!--                    <button>Add to Cart</button>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
     </div>
 </main>
 
