last scroll position in checkout

--- a/front/checkout.html
+++ b/front/checkout.html
@@ -31,9 +31,9 @@
         <i class="material-icons">favorite</i>
         <i class="material-icons">shopping_cart</i>
         <div class="links">
-            <a href="?">Login</a>
+            <a href="login.html">Login</a>
             <span> | </span>
-            <a href="?">Sign Up</a>
+            <a href="register.html">Sign Up</a>
         </div>
     </div>
 </header>
@@ -106,6 +106,48 @@
                 </div>
                 <div class="price">$22</div>
             </div>
+            <div class="coupon">
+                <div class="details">
+                    <div class="image">
+                        <img src="https://img.freepik.com/free-photo/abstract-surface-textures-white-concrete-stone-wall_74190-8184.jpg?size=626&ext=jpg"
+                             alt="image">
+                    </div>
+                    <div class="coupon_name">Coupon Name</div>
+                    <div class="coupon_description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eveniet harum, illum minus
+                        nobis officia quos rem repellat reprehenderit tempora.
+                    </div>
+                </div>
+                <div class="price">$22</div>
+            </div>
+            <div class="coupon">
+                <div class="details">
+                    <div class="image">
+                        <img src="https://img.freepik.com/free-photo/abstract-surface-textures-white-concrete-stone-wall_74190-8184.jpg?size=626&ext=jpg"
+                             alt="image">
+                    </div>
+                    <div class="coupon_name">Coupon Name</div>
+                    <div class="coupon_description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eveniet harum, illum minus
+                        nobis officia quos rem repellat reprehenderit tempora.
+                    </div>
+                </div>
+                <div class="price">$22</div>
+            </div>
+            <div class="coupon">
+                <div class="details">
+                    <div class="image">
+                        <img src="https://img.freepik.com/free-photo/abstract-surface-textures-white-concrete-stone-wall_74190-8184.jpg?size=626&ext=jpg"
+                             alt="image">
+                    </div>
+                    <div class="coupon_name">Coupon Name</div>
+                    <div class="coupon_description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eveniet harum, illum minus
+                        nobis officia quos rem repellat reprehenderit tempora.
+                    </div>
+                </div>
+                <div class="price">$22</div>
+            </div>
 
         </div>
         <div class="line"></div>
@@ -118,8 +160,16 @@
         <div class="btn_container">
             <div class="btn_place">
                 <button class="transparent_bg" onclick="topFunction()">Back to top</button>
-                <button class="transparent_bg">Back</button>
-                <button class="green_bg">Save</button>
+                <button class="transparent_bg">
+                    <a href="item-details.html">
+                        Back
+                    </a>
+                </button>
+                <button class="green_bg">
+                    <a href="main-page.html">
+                        Save
+                    </a>
+                </button>
             </div>
         </div>
     </div>
